small bugfixes, small performance optimisations, cosmetics